--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -69,176 +69,194 @@
     </header>
 
 
-    <main class="pag-calzado ">
-        <section class="calzado-contenedor">
-            <h2>RECOMENDADOS PARA VOS</h2>
-            <div class="recomendados-contenedor">
+    <main class="calzado-pag">
+        <div class="calzado-catalogo">
+            <div>
+                <h3>CALZADO</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Nosotros</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Contacto</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Locales</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Trabajas con nosotros</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <section class="calzado-contenedor">s
+                <div>
+                    <a href="">
+                        <img src="../img/adidas-court-platform-w-blancas-plateadas.png" alt="w adidas court plataform">
+                        <h3>ADIDAS COURT PLATAFORM</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">4.990</span>
+                            </strong>
+                            <del class="precio-rebajado">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">3.690</span>
+                            </del>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="../img/lacoste-ag-lt23-blancas.png" alt="Lacoste ag-lt23 ultra">
+                        <h3>LACOSTE AG-LT23 ULTRA</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">12.400</span>
+                            </strong>
+                        </div>
+                    </a>
+                </div>    
+                <div>
+                    <a href="">
+                        <img src="../img/nike-flex-experience-run-11-beige.png" alt="flex experience 11">
+                        <h3>NIKE FLEX EXPERIENCE RUN 11</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">4.690</span>
+                            </strong>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="../img/nike-phantom-gx-pro-fg-amarillos.png" alt="phantom gk pro fg">
+                        <h3>NIKE PHANTOM GX PRO FG</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">9.490</span>
+                            </strong>
+                            <del class="precio-rebajado">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">7.990</span>
+                            </del>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="../img/converse-chuck-taylor-all-star-hi-roajs.png" alt="converse all star hi rojas">
+                        <h3>CONVERSE CHUCK TAYLOR ALL STAR HI</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">3.790</span>
+                            </strong>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="../img/nike-court-vision-low-blanchas-swoosh-negro.png" alt="court vision low blancas">
+                        <h3>COURT VISION LOW</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">4.990</span>
+                            </strong>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="../img/nike-air-max-sc-rosado.png" alt="air max sc">
+                        <h3>NIKE AIR MAX SC</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">5.690</span>
+                            </strong>
+                        </div>
+                    </a>
+                </div>
                 <div class="vomero-16">
                     <a href="">
-                        <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                        <h3>NIKE AIR ZOOM VOMERO 16</h3>
+                        <img src="../img/adidas-hoops-3-0-blancas.png" alt="adidas hoops 3.0">
+                        <h3>ADIDAS HOOPS 3.0</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">4.690</span>
+                            </strong>
+                        </div>
+                    </a>
+                </div>
+                <div class="vomero-16">
+                    <a href="">
+                        <img src="../img/puma-smash-3-0-amarillas.png" alt="puma smash 3.0">
+                        <h3>PUMA SMASH 3.0</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">3.990</span>
+                            </strong>
+                        </div>
+                    </a>
+                </div>
+                <div class="vomero-16">
+                    <a href="">
+                        <img src="../img/nike-court-vision-low-negras-swoosh-blanco.png" alt="court vision negras">
+                        <h3>COURT VISION LOW</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">4.990</span>
+                            </strong>
+                            <del class="precio-rebajado">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">3.790</span>
+                            </del>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="../img/converse-chuck-taylor-all-star-ox-blancas.png" alt="converse low blancas">
+                        <h3>CONVERSE CHUCK TAYLOR ALL STAR OX</h3>
                         <div>
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">7.490</span>
                             </strong>
-                            <del class="precio-rebajado">
-                                <span class="precio-moneda">UYU</span>
-                                <span class="precio-monto">9.490</span>
-                            </del>
                         </div>
                     </a>
                 </div>
-                <div class="recomendados-contenedor">
-                    <div class="vomero-16">
-                        <a href="">
-                            <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                            <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                            <div>
-                                <strong class="precio">
-                                    <span class="precio-moneda">UYU</span>
-                                    <span class="precio-monto">7.490</span>
-                                </strong>
-                                <del class="precio-rebajado">
-                                    <span class="precio-moneda">UYU</span>
-                                    <span class="precio-monto">9.490</span>
-                                </del>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="recomendados-contenedor">
-                        <div class="vomero-16">
-                            <a href="">
-                                <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                <div>
-                                    <strong class="precio">
-                                        <span class="precio-moneda">UYU</span>
-                                        <span class="precio-monto">7.490</span>
-                                    </strong>
-                                    <del class="precio-rebajado">
-                                        <span class="precio-moneda">UYU</span>
-                                        <span class="precio-monto">9.490</span>
-                                    </del>
-                                </div>
-                            </a>
+                <div>
+                    <a href="">
+                        <img src="../img/nike-zoom-superfly-9-academy-xxv-jr-pleateadas-rosadas.png" alt="vomero hombre gris">
+                        <h3>NIKE ZOOM SUPERFLY 9 ACADEMY XXV</h3>
+                        <div>
+                            <strong class="precio">
+                                <span class="precio-moneda">UYU</span>
+                                <span class="precio-monto">5.290</span>
+                            </strong>
                         </div>
-                        <div class="recomendados-contenedor">
-                            <div class="vomero-16">
-                                <a href="">
-                                    <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                    <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                    <div>
-                                        <strong class="precio">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">7.490</span>
-                                        </strong>
-                                        <del class="precio-rebajado">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">9.490</span>
-                                        </del>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="recomendados-contenedor">
-                                <div class="vomero-16">
-                                    <a href="">
-                                        <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                        <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                        <div>
-                                            <strong class="precio">
-                                                <span class="precio-moneda">UYU</span>
-                                                <span class="precio-monto">7.490</span>
-                                            </strong>
-                                            <del class="precio-rebajado">
-                                                <span class="precio-moneda">UYU</span>
-                                                <span class="precio-monto">9.490</span>
-                                            </del>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div> 
-                            <div class="vomero-16">
-                                <a href="">
-                                    <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                    <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                    <div>
-                                        <strong class="precio">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">7.490</span>
-                                        </strong>
-                                        <del class="precio-rebajado">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">9.490</span>
-                                        </del>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="vomero-16">
-                                <a href="">
-                                    <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                    <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                    <div>
-                                        <strong class="precio">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">7.490</span>
-                                        </strong>
-                                        <del class="precio-rebajado">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">9.490</span>
-                                        </del>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="vomero-16">
-                                <a href="">
-                                    <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                    <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                    <div>
-                                        <strong class="precio">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">7.490</span>
-                                        </strong>
-                                        <del class="precio-rebajado">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">9.490</span>
-                                        </del>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="vomero-16">
-                                <a href="">
-                                    <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                    <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                    <div>
-                                        <strong class="precio">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">7.490</span>
-                                        </strong>
-                                        <del class="precio-rebajado">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">9.490</span>
-                                        </del>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="vomero-16">
-                                <a href="">
-                                    <img src="../img/vomero16-hombre-gris.png" alt="vomero hombre gris">
-                                    <h3>NIKE AIR ZOOM VOMERO 16</h3>
-                                    <div>
-                                        <strong class="precio">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">7.490</span>
-                                        </strong>
-                                        <del class="precio-rebajado">
-                                            <span class="precio-moneda">UYU</span>
-                                            <span class="precio-monto">9.490</span>
-                                        </del>
-                                    </div>
-                                </a>
-                            </div>
+                    </a>
+                </div>
+            </div>
         </section>
+
 
     </main>
     <footer id="contacto">
