pagina-calzado-catalogo

--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -68,36 +68,110 @@
         </nav>
     </header>
 
-
     <main class="calzado-pag">
         <div class="calzado-catalogo">
             <div>
-                <h3>CALZADO</h3>
+                <h3>GÉNERO</h3>
                 <ul>
                     <li>
                         <a href="">
-                            <p>Nosotros</p>
+                            <p>Hombre</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <p>Contacto</p>
+                            <p>Mujer</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <p>Locales</p>
+                            <p>Niños</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>MARCAS</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Nike</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <p>Trabajas con nosotros</p>
+                            <p>Adidas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Puma</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Lacoste</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Converse</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>DISCIPLINA</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Running</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Training</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Moda</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Fútbol</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Moda</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>GÉNERO</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Hombre</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Mujer</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Niños</p>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-        <section class="calzado-contenedor">s
+        <section class="calzado-contenedor">
                 <div>
                     <a href="">
                         <img src="../img/adidas-court-platform-w-blancas-plateadas.png" alt="w adidas court plataform">
