--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -179,11 +179,11 @@
                         <div>
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
-                                <span class="precio-monto">4.990</span>
+                                <span class="precio-monto">3.690</span>
                             </strong>
                             <del class="precio-rebajado">
                                 <span class="precio-moneda">UYU</span>
-                                <span class="precio-monto">3.690</span>
+                                <span class="precio-monto">4.990</span>
                             </del>
                         </div>
                     </a>
@@ -219,11 +219,11 @@
                         <div>
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
-                                <span class="precio-monto">9.490</span>
+                                <span class="precio-monto">7.990</span>
                             </strong>
                             <del class="precio-rebajado">
                                 <span class="precio-moneda">UYU</span>
-                                <span class="precio-monto">7.990</span>
+                                <span class="precio-monto">9.490</span>
                             </del>
                         </div>
                     </a>
@@ -264,7 +264,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="vomero-16">
+                <div>
                     <a href="">
                         <img src="../img/adidas-hoops-3-0-blancas.png" alt="adidas hoops 3.0">
                         <h3>ADIDAS HOOPS 3.0</h3>
@@ -276,7 +276,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="vomero-16">
+                <div>
                     <a href="">
                         <img src="../img/puma-smash-3-0-amarillas.png" alt="puma smash 3.0">
                         <h3>PUMA SMASH 3.0</h3>
@@ -288,18 +288,18 @@
                         </div>
                     </a>
                 </div>
-                <div class="vomero-16">
+                <div>
                     <a href="">
                         <img src="../img/nike-court-vision-low-negras-swoosh-blanco.png" alt="court vision negras">
                         <h3>COURT VISION LOW</h3>
                         <div>
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
-                                <span class="precio-monto">4.990</span>
+                                <span class="precio-monto">3.790</span>
                             </strong>
                             <del class="precio-rebajado">
                                 <span class="precio-moneda">UYU</span>
-                                <span class="precio-monto">3.790</span>
+                                <span class="precio-monto">4.990</span>
                             </del>
                         </div>
                     </a>
@@ -449,7 +449,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-        </script>
+    </script>
 </body>
 
 </html>
