--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -178,10 +178,10 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/naim.caceres18/" target="_blank">
-                            <img src="./img/instagram.png" width="50" alt="logo Instagram">
+                            <img src="../img/instagram.png" width="50" alt="logo Instagram">
                         </a>
                         <a href="https://twitter.com/naimcaceres18" target="_blank">
-                            <img src="./img/twitter.png" width="50" alt="logo Twitter">
+                            <img src="../img/twitter.png" width="50" alt="logo Twitter">
                         </a>
                     </li>
                 </ul>
