--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -188,19 +188,16 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/naim.caceres18/" target="_blank">
-                            <img src="./img/instagram.png" width="50" alt="logo Instagram">
+                            <img src="../img/instagram.png" width="50" alt="logo Instagram">
                         </a>
                         <a href="https://twitter.com/naimcaceres18" target="_blank">
-                            <img src="./img/twitter.png" width="50" alt="logo Twitter">
+                            <img src="../img/twitter.png" width="50" alt="logo Twitter">
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-    </script>
 </body>
 
 </html>
