--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -69,7 +69,7 @@
     </header>
 
     <main class="accesorios-pag">
-        <div class="accesorios-catalogo">
+        <div class="accesorios-filtro">
             <div>
                 <h3>GÉNERO</h3>
                 <ul>
