--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -66,7 +66,7 @@
     </header>
     
     <main class="rebajas-pag">
-        <div class="rebajas-catalogo">
+        <div class="rebajas-filtro">
             <div>
                 <h3>GÉNERO</h3>
                 <ul>
