--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -69,7 +69,7 @@
     </header>
 
     <main class="calzado-pag">
-        <div class="calzado-catalogo">
+        <div class="calzado-filtro">
             <div>
                 <h3>GÉNERO</h3>
                 <ul>
