--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -69,7 +69,7 @@
     </header>
 
     <main class="indumentaria-pag">
-        <div class="indumentaria-catalogo">
+        <div class="indumentaria-filtro">
             <div>
                 <h3>GÉNERO</h3>
                 <ul>
