--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        <button class="btn btn-outline-dark" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <div class="moda-remera-lacoste">
                     <a href="">
                         <img src="./img/remera-lacoste-regular.png" alt="remera lacoste">
-                        <h3>REMERA LACOSTE CLASSIC FIT MONOGRAM</h3>
+                        <h3>REMERA LACOSTE CLASSIC FIT</h3>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">7.900</span>
@@ -256,7 +256,7 @@
                                 <input type="email" name="email" required="" placeholder="Ingresa tu e-mail">
                             </li>
                             <li>
-                                <button type="submit" class="btn btn-primary"
+                                <button type="submit" <button class="btn btn-outline-light"
                                     style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
                                     SUSCRIBIRME
                                 </button>
