--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <img class="logo-nike" src="./img/nike.png" alt="logo nike">
                 </a>
                 <a href="">
-                    <img class="puma-nike" src="./img/puma.png" alt="logo puma">
+                    <img class="logo-puma" src="./img/puma.png" alt="logo puma">
                 </a>
                 <a href="">
                     <img class="logo-converse" src="./img/converse.png" alt="logo converse">
@@ -220,22 +220,22 @@
             <div class="disciplinas-contenedor">
                 <div class="disciplinas-running">
                     <a href="">
-                        <img class="discplinas-running-img" src="./img/running-comprar.png" alt="running">
+                        <img class="disicplinas-running-img" src="./img/running-comprar.png" alt="running">
                     </a>
                 </div>
                 <div class="disciplinas-training">
                     <a href="">
-                        <img class="discplinas-training-img" src="./img/training-comprar.png" alt="training">
+                        <img class="disicplinas-training-img" src="./img/training-comprar.png" alt="training">
                     </a>
                 </div>
                 <div class="disciplinas-moda">
                     <a href="">
-                        <img class="discplinas-moda-img" src="./img/moda-comprar.png" alt="moda">
+                        <img class="disicplinas-moda-img" src="./img/moda-comprar.png" alt="moda">
                     </a>
                 </div>
                 <div class="disciplinas-niños">
                     <a href="">
-                        <img class="discplinas-niños-img" src="./img/niños-comprar.png" alt="niños">
+                        <img class="disciplinas-niños-img" src="./img/niños-comprar.png" alt="niños">
                     </a>
                 </div>
             </div>
