--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                 <img class="nuevas-rebajas" src="./img/nuevas-rebajas.gif" alt="nuevas rebajas">
             </a>
         </section>
-        <!---MI IDEA ES AGREGAR UNA PAGINA CON ESTA SECCIÓN-->
         <section class="marcas">
             <div>
                 <a href="">
@@ -256,9 +255,7 @@
                                 <input type="email" name="email" required="" placeholder="Ingresa tu e-mail">
                             </li>
                             <li>
-                                <button type="submit" <button class="btn btn-outline-light"
-                                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                                    SUSCRIBIRME
+                                <button class="btn btn-outline-dark" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">SUSCRIBIRME
                                 </button>
                             </li>
                         </ul>
