--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -3,8 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Rincón</title>
     <!---BOOSTRAP--->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!---CSS--->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -64,7 +63,7 @@
             </div>
         </nav>
     </header>
-    
+
     <main class="rebajas-pag">
         <div class="rebajas-filtro">
             <div>
@@ -89,7 +88,7 @@
             </div>
             <div>
                 <h3>CATEGORÍAS</h3>
-                <ul>    
+                <ul>
                     <li>
                         <a href="">
                             <p>Indumentaria</p>
@@ -109,7 +108,7 @@
             </div>
             <div>
                 <h3>MARCAS</h3>
-                <ul>    
+                <ul>
                     <li>
                         <a href="">
                             <p>Nike</p>
@@ -251,7 +250,8 @@
             </div>
             <div>
                 <a href="">
-                    <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png" alt="court vision low blancas">
+                    <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png"
+                        alt="court vision low blancas">
                     <h3>ADIDAS OZELLE CLOUDFOAM LIFESTYLE</h3>
                     <div>
                         <strong class="precio">
@@ -347,8 +347,7 @@
             </div>
             <div>
                 <a href="">
-                    <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png"
-                        alt="vomero hombre gris">
+                    <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="vomero hombre gris">
                     <h3>REMERA NIKE SPORTWEAR CLUB TEE</h3>
                     <div>
                         <strong class="precio">
@@ -362,6 +361,38 @@
                     </div>
                 </a>
             </div>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../img/carousel-calzado-nike-arimax-ap.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/carousel-indu-adidas-camiseta-juventus.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/carousel-indu-nike-remera-drifit-grisnegra.png" class="d-block w-100"
+                            alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/carousel-indu-nike-short-drifit-verdeagua.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/carousel-indu-umbro-campera-lluvia-negra.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/carousel-w-indu-nike-remera-spw-naranja.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </section>
     </main>
