--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -168,7 +168,7 @@
             </div>
         </div>
         <section class="rebajas-contenedor">
-            <div>
+            <div class="rebajas-gorrdo-adidas">
                 <a href="">
                     <img src="../img/rebajas-acc-adidas-gorro-performance-beanie.png" alt="w adidas court plataform">
                     <h3>GORRO ADIDAS PERFORMANCE BANIE</h3>
@@ -184,7 +184,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-mochila-element">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-mochila-element.png" alt="Lacoste ag-lt23 ultra">
                     <h3>MOCHILA NIKE ELEMENTAL</h3>
@@ -200,7 +200,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-top-drifit">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-top-dri-fit.png" alt="flex experience 11">
                     <h3>TOP NIKE DRI-FIT INDY V-NECK</h3>
@@ -216,7 +216,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-canilleras-umbro">
                 <a href="">
                     <img src="../img/rebajas-acc-umbro-canilleras-pro.png" alt="phantom gk pro fg">
                     <h3>CANILLERAS UMBRO PRO</h3>
@@ -232,7 +232,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-adidas-adilette">
                 <a href="">
                     <img src="../img/rebajas-calzado-adidas-adilette-comfort.png" alt="converse all star hi rojas">
                     <h3>ADIDAS ADILETTE COMFORT</h3>
@@ -248,7 +248,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-ozelle">
                 <a href="">
                     <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png"
                         alt="court vision low blancas">
@@ -265,7 +265,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-react-infinity">
                 <a href="">
                     <img src="../img/rebajas-calzado-nike-react-infinity-runfk3.png" alt="air max sc">
                     <h3>NIKE REACT INFINITY RUN FK 3</h3>
@@ -281,7 +281,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-puma-anzarun">
                 <a href="">
                     <img src="../img/rebajas-calzado-puma-anzarun-lite-slipon.png" alt="adidas hoops 3.0">
                     <h3>PUMA ANZARUN LITE SLIPON</h3>
@@ -297,7 +297,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-pantalon-nike">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-pantalon-stardust-jogger.png" alt="puma smash 3.0">
                     <h3>PANTALON NIKE NSW STARDUST JOGGER</h3>
@@ -313,7 +313,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-remera-dirfit-nike">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-dri-fit-run-division.png" alt="court vision negras">
                     <h3>REMERA NIKE DRI-FIT RUN DIVISION</h3>
@@ -329,7 +329,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-nike-remera-psg">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-psg-alternativa.png" alt="converse low blancas">
                     <h3>REMERA NIKE PSG ALTERNATIVO</h3>
@@ -345,7 +345,7 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="rebajas-remera-spw-nike">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="vomero hombre gris">
                     <h3>REMERA NIKE SPORTWEAR CLUB TEE</h3>
