--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -168,7 +168,7 @@
             </div>
         </div>
         <section class="rebajas-contenedor">
-            <div class="rebajas-gorrdo-adidas">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-adidas-gorro-performance-beanie.png" alt="w adidas court plataform">
                     <h3>GORRO ADIDAS PERFORMANCE BANIE</h3>
@@ -184,7 +184,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-mochila-element">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-mochila-element.png" alt="Lacoste ag-lt23 ultra">
                     <h3>MOCHILA NIKE ELEMENTAL</h3>
@@ -200,7 +200,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-top-drifit">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-top-dri-fit.png" alt="flex experience 11">
                     <h3>TOP NIKE DRI-FIT INDY V-NECK</h3>
@@ -216,7 +216,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-canilleras-umbro">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-umbro-canilleras-pro.png" alt="phantom gk pro fg">
                     <h3>CANILLERAS UMBRO PRO</h3>
@@ -232,7 +232,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-adidas-adilette">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-adidas-adilette-comfort.png" alt="converse all star hi rojas">
                     <h3>ADIDAS ADILETTE COMFORT</h3>
@@ -248,7 +248,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-ozelle">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png"
                         alt="court vision low blancas">
@@ -265,7 +265,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-react-infinity">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-nike-react-infinity-runfk3.png" alt="air max sc">
                     <h3>NIKE REACT INFINITY RUN FK 3</h3>
@@ -281,7 +281,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-puma-anzarun">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-puma-anzarun-lite-slipon.png" alt="adidas hoops 3.0">
                     <h3>PUMA ANZARUN LITE SLIPON</h3>
@@ -297,7 +297,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-pantalon-nike">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-pantalon-stardust-jogger.png" alt="puma smash 3.0">
                     <h3>PANTALON NIKE NSW STARDUST JOGGER</h3>
@@ -313,7 +313,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-remera-dirfit-nike">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-dri-fit-run-division.png" alt="court vision negras">
                     <h3>REMERA NIKE DRI-FIT RUN DIVISION</h3>
@@ -329,7 +329,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-nike-remera-psg">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-psg-alternativa.png" alt="converse low blancas">
                     <h3>REMERA NIKE PSG ALTERNATIVO</h3>
@@ -345,7 +345,7 @@
                     </div>
                 </a>
             </div>
-            <div class="rebajas-remera-spw-nike">
+            <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="vomero hombre gris">
                     <h3>REMERA NIKE SPORTWEAR CLUB TEE</h3>
@@ -361,38 +361,53 @@
                     </div>
                 </a>
             </div>
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/carousel-calzado-nike-arimax-ap.png" class="d-block w-100" alt="...">
+            <div class="carousel-rebajas">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <a href="">
+                                <img src="../img/carousel-indu-adidas-camiseta-juventus.png" class="d-block w-100" alt="...">
+                            </a>
+                            
+                        </div>
+                        <div class="carousel-item">
+                            <a href="">
+                                <img src="../img/carousel-calzado-nike-arimax-ap.png" class="d-block w-100" alt="...">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="">
+                                <img src="../img/carousel-indu-nike-remera-drifit-grisnegra.png" class="d-block w-100" alt="...">
+                            </a>
+                            
+                        </div>
+                        <div class="carousel-item">
+                            <a href="">
+                                <img src="../img/carousel-indu-nike-short-drifit-verdeagua.png" class="d-block w-100" alt="...">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="">
+                                <img src="../img/carousel-indu-umbro-campera-lluvia-negra.png" class="d-block w-100" alt="...">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="">
+                                <img src="../img/carousel-w-indu-nike-remera-spw-naranja.png" class="d-block w-100" alt="...">
+                            </a>
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="../img/carousel-indu-adidas-camiseta-juventus.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/carousel-indu-nike-remera-drifit-grisnegra.png" class="d-block w-100"
-                            alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/carousel-indu-nike-short-drifit-verdeagua.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/carousel-indu-umbro-campera-lluvia-negra.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/carousel-w-indu-nike-remera-spw-naranja.png" class="d-block w-100" alt="...">
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </section>
     </main>
