--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -57,7 +57,7 @@
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        <button class="btn btn-outline-dark" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
@@ -171,7 +171,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-adidas-gorro-performance-beanie.png" alt="w adidas court plataform">
-                    <h3>GORRO ADIDAS PERFORMANCE BANIE</h3>
+                    <h3 class="producto-rebaja">GORRO ADIDAS PERFORMANCE BANIE</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -187,7 +187,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-mochila-element.png" alt="Lacoste ag-lt23 ultra">
-                    <h3>MOCHILA NIKE ELEMENTAL</h3>
+                    <h3 class="producto-rebaja">MOCHILA NIKE ELEMENTAL</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -203,7 +203,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-top-dri-fit.png" alt="flex experience 11">
-                    <h3>TOP NIKE DRI-FIT INDY V-NECK</h3>
+                    <h3 class="producto-rebaja">TOP NIKE DRI-FIT INDY V-NECK</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -219,7 +219,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-umbro-canilleras-pro.png" alt="phantom gk pro fg">
-                    <h3>CANILLERAS UMBRO PRO</h3>
+                    <h3 class="producto-rebaja">CANILLERAS UMBRO PRO</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -232,10 +232,10 @@
                     </div>
                 </a>
             </div>
-            <div class="imagenes-rebajas">
-                <a href="">
+                <div class="imagenes-rebajas">
+                    <a href="">
                     <img src="../img/rebajas-calzado-adidas-adilette-comfort.png" alt="converse all star hi rojas">
-                    <h3>ADIDAS ADILETTE COMFORT</h3>
+                    <h3 class="producto-rebaja">ADIDAS ADILETTE COMFORT</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -252,7 +252,7 @@
                 <a href="">
                     <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png"
                         alt="court vision low blancas">
-                    <h3>ADIDAS OZELLE CLOUDFOAM LIFESTYLE</h3>
+                    <h3 class="producto-rebaja">ADIDAS OZELLE CLOUDFOAM LIFESTYLE</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -268,7 +268,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-nike-react-infinity-runfk3.png" alt="air max sc">
-                    <h3>NIKE REACT INFINITY RUN FK 3</h3>
+                    <h3 class="producto-rebaja">NIKE REACT INFINITY RUN FK 3</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -284,7 +284,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-puma-anzarun-lite-slipon.png" alt="adidas hoops 3.0">
-                    <h3>PUMA ANZARUN LITE SLIPON</h3>
+                    <h3 class="producto-rebaja">PUMA ANZARUN LITE SLIPON</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -300,7 +300,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-pantalon-stardust-jogger.png" alt="puma smash 3.0">
-                    <h3>PANTALON NIKE NSW STARDUST JOGGER</h3>
+                    <h3 class="producto-rebaja">PANTALON NIKE NSW STARDUST JOGGER</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -316,7 +316,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-dri-fit-run-division.png" alt="court vision negras">
-                    <h3>REMERA NIKE DRI-FIT RUN DIVISION</h3>
+                    <h3 class="producto-rebaja">REMERA NIKE DRI-FIT RUN DIVISION</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -332,7 +332,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-psg-alternativa.png" alt="converse low blancas">
-                    <h3>REMERA NIKE PSG ALTERNATIVO</h3>
+                    <h3 class="producto-rebaja">REMERA NIKE PSG ALTERNATIVO</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -348,7 +348,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="vomero hombre gris">
-                    <h3>REMERA NIKE SPORTWEAR CLUB TEE</h3>
+                    <h3 class="producto-rebaja">REMERA NIKE SPORTWEAR CLUB TEE</h3>
                     <div>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
